--- a/frontend/styles/index.css
+++ b/frontend/styles/index.css
@@ -1,17 +1,35 @@
-:root{
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap');
+
+:root {
     --first-color: #2A4849;
     --second-color: #222e50;
     --third-color: #426B69;
     --fourth-color: #8BB174;
     --fifth-color: #B5CA8D;
+    --black: #303030;
+    --grey: #909090;
+    --off-white: #EDEEE9;
+    --code: #D8DBCE;
+}
+
+*,
+*::before,
+*::after {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
+html {
+    overflow-x: hidden;
 }
 
 body {
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    margin: 0;
-    padding: 0;
+    font-family: 'Inter', sans-serif;
     background-color: #f0f0f0;
     height: 100vh;
+    width: 100%;
 }
 
 header {
@@ -19,20 +37,36 @@ header {
     color: #fff;
     padding: 20px;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    font-size: 18px;
 }
 
-.logo{
+.logo {
     display: flex;
-    flex-direction: column;
+    /* flex-direction: column; */
     font-size: large;
+    justify-content: center;
+    align-items: center;
+    width: auto;
 }
 
 .logo img {
     max-width: 80px;
     margin-bottom: 10px;
-    margin-left: 15px;
+    /* margin-left: 15px; */
+}
+
+.logo h2 {
+    font-size: clamp(2rem, 4vw, 5rem);
+}
+
+nav {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    margin-left: 20px;
 }
 
 nav ul {
@@ -46,7 +80,7 @@ nav li {
     margin-right: 20px;
 }
 
-nav ul li a:hover{
+nav ul li a:hover {
     color: antiquewhite;
 }
 
@@ -65,7 +99,7 @@ main {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
-main section{
+main section {
     width: 90%;
     height: 90%;
     border: black 2px solid;
@@ -83,13 +117,135 @@ footer a {
     text-decoration: none;
 }
 
-.form-input{
+/* 
+.form-input {
     height: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.form-input input{
+.form-input input {
     margin: 20;
+} */
+
+.form {
+    align-self: center;
+    display: flex;
+    flex-direction: column;
+    padding: 2rem;
+}
+
+.form__input {
+    width: clamp(120px, 100%, 420px);
+    height: 2.5rem;
+    padding: 0 1.25rem;
+    border: 1px solid var(--black);
+    border-radius: 2px;
+    margin: 0.625rem auto;
+    transition: all 250ms;
+}
+
+@media (min-width: 768px) {
+    .form__input {
+        width: clamp(120px, 35vw, 420px);
+    }
+}
+
+.form :focus {
+    outline: none;
+    border-top-color: rgba(0, 0, 0, 0.1);
+}
+
+.form :focus+.form__label,
+:not(:placeholder-shown)+.form__label {
+    transform: translateY(-4.50rem) scale(1);
+    color: var(--black);
+}
+
+.form ::placeholder {
+    display: none;
+    color: transparent;
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
+    position: relative;
+}
+
+.form:not(:placeholder-shown) {
+    border-top-color: rgba(0, 0, 0, 0.5);
+}
+
+.form__label {
+    font-size: 1rem;
+    color: var(--grey);
+    display: block;
+
+    /* Moves the label on TOP of the placeholder */
+    /* You'll need to change this as needed */
+    transform: translate(1.25rem, -2.5rem);
+    transform-origin: 0 0;
+    /* Used later for transitions */
+    transition: all 500ms;
+
+    -webkit-user-select: none;
+    /* Safari */
+    -ms-user-select: none;
+    /* IE 10 and IE 11 */
+    user-select: none;
+    /* Standard syntax */
+
+    /* THIS PART IS IMPORTANT! */
+    /* This line prevents the label from being selected.*/
+    /* This is crucial because if this line doesn't exist, users can
+       click on the label, instead of the input field. That's bad UX! */
+    pointer-events: none;
+}
+
+.button {
+  align-items: center;
+  background-clip: padding-box;
+  background-color: var(--first-color);
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
+  box-sizing: border-box;
+  color: #fff;
+  cursor: pointer;
+  display: inline-flex;
+  font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 16px;
+  font-weight: 600;
+  justify-content: center;
+  line-height: 1.25;
+  margin: 0;
+  min-height: 3rem;
+  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
+  position: relative;
+  text-decoration: none;
+  transition: all 250ms;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  vertical-align: baseline;
+  width: auto;
+}
+
+.button:hover,
+.button:focus {
+  background-color: var(--fourth-color);
+  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
+}
+
+.button:hover {
+  transform: translateY(-1px);
+}
+
+.button:active {
+  background-color: var(--fourth-color);
+  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
+  transform: translateY(0);
 }
